testsuite/poke.pkl/int-union-type-diag-10.pk
/* { dg-do compile } */

type Foo =
  union uint<33>
  {
    struct int<33>
    {
      int<17> x;
      int<16> y;
    } b;
    int<33> c @ 0#B; /* { dg-error "labels are not allowed" } */
  };
